# gitreiz

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: PLAN-action-context.md  PLAN-action-editor-enhancement.md  PLAN-bottom-bar-commit.md  PLAN-custom-actions-context.md  PLAN-git-config-tabs.md  PLAN-git-merge-pull-push.md  PLAN-git-worktree.md  PLAN-new-features.md  PLAN-window-sizing-readme.md  PLAN-zengit-custom-actions.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  crypto.rs  custom_actions.rs  git.rs  lib.rs  main.rs  stats.rs  version.rs
src/components/: ActionConfirmDialog.tsx  CommitPanel.tsx  ConfigForm.tsx  ConfigModal.tsx  ConfirmDialog.tsx  ConflictResolver.tsx  CustomActionsBuilder.tsx  DashboardPanel.tsx  DeployPanel.tsx  DiffViewer.tsx  GitTab.tsx  GlobalSettings.tsx  GraphBuilder.tsx  HelpGuide.tsx  HomePage.tsx  PasswordDialog.tsx  PerformanceTab.tsx  ProjectList.tsx  ProjectWorkspace.tsx  QuickCommit.tsx  SplashScreen.tsx  StashPanel.tsx  SyntaxEditor.tsx  TagPanel.tsx  TeamDashboard.tsx  TerminalBar.tsx  WebhookTab.tsx  WorktreePanel.tsx
src/components/nodes/: ActionNodeWrapper.tsx  GitNodes.tsx  (+1 more)
src/context/: ThemeContext.tsx
src/hooks/: useAutoFetch.ts  useEscClose.ts  useKeyboardShortcuts.ts
src/i18n/: translations.ts  useI18n.tsx
src/store/: useConfirmStore.ts  useCustomActionsStore.ts  useProjectStore.ts
src/utils/: compositeRunner.ts  webhookDispatcher.ts
